--- a/1- bloco-de-notas/index.html
+++ b/1- bloco-de-notas/index.html
@@ -5,8 +5,14 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Bloco de Notas</title>
+   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   
+   <div class="notepad">
+      <div class="notepad__top">
+      </div>
+      <div class="notepad__write">
+      </div>
+   </div>
 </body>
 </html>
