--- a/1- cronometro/index.html
+++ b/1- cronometro/index.html
@@ -6,13 +6,9 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Bloco de Notas</title>
    <link rel="stylesheet" href="style.css">
+   <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" data-auto-replace-svg></script>
 </head>
 <body>
-   <div class="notepad">
-      <div class="notepad__top">
-      </div>
-      <div class="notepad__write">
-      </div>
-   </div>
+   
 </body>
 </html>
