--- a/1- cronometro/index.html
+++ b/1- cronometro/index.html
@@ -4,11 +4,25 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Bloco de Notas</title>
+   <title>Cronometro</title>
    <link rel="stylesheet" href="style.css">
    <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" data-auto-replace-svg></script>
 </head>
 <body>
-   
+   <main>
+      <div class="contador">
+         <p>
+            <Span class="seconds">0</Span>
+            <span class="minutes">0</span>
+            <span class="hours">0</span>
+            <span class="days">0</span>
+         </p>
+      </div>
+      <div class="btns">
+         <button class="pause btn">Pause</button>
+         <button class="start btn">Start</button>
+         <button class="reset btn">Reset</button>
+      </div>
+   </main>
 </body>
 </html>
