--- a/1- cronometro/index.html
+++ b/1- cronometro/index.html
@@ -11,12 +11,7 @@
 <body>
    <main>
       <div class="contador">
-         <p>
-            <Span class="seconds">0</Span>
-            <span class="minutes">0</span>
-            <span class="hours">0</span>
-            <span class="days">0</span>
-         </p>
+            <Span class="seconds teste">00:00:00</span>
       </div>
       <div class="btns">
          <button class="pause btn">Pause</button>
@@ -24,5 +19,6 @@
          <button class="reset btn">Reset</button>
       </div>
    </main>
+   <script src="script.js"></script>
 </body>
 </html>
