--- a/1- escreva-tela/index.html
+++ b/1- escreva-tela/index.html
@@ -21,6 +21,21 @@
     />
   </head>
   <body>
+    <main>
+      <div class="content">
+        <div class="input-write">
+          <input type="text"
+          placeholder="Escreva"
+          class="input">
+          <button type="submit" class="btn-write">Enviar</button>
+        </div>
+        <div class="write-show">
+          <ul class="write-ul">
+            <li class="li completed" >estilizando</li>
+          </ul>
+        </div>
+      </div>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
