--- a/1- escreva-tela/index.html
+++ b/1- escreva-tela/index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="write-show">
           <ul class="write-ul">
-            <li class="li completed" >estilizando</li>
+            <!-- <li class="li completed" >estilizando</li> -->
           </ul>
         </div>
       </div>
