novas cores e tags

--- a/1- escreva-tela/index.html
+++ b/1- escreva-tela/index.html
@@ -21,6 +21,8 @@
     />
   </head>
   <body>
+    <h1>Todo-list</h1>
+
     <main>
       <div class="content">
         <div class="input-write">
@@ -34,8 +36,14 @@
             <!-- <li class="li completed" >estilizando</li> -->
           </ul>
         </div>
+        <div class="info">
+        </div>
       </div>
     </main>
+    <div class="info">
+      <p>Para marcar como concluida de um clique sobre a lista</p>
+      <p>Para excluir, clique duas vezes em cima da lista</p>  
+    </div>
     <script src="app.js"></script>
   </body>
 </html>
