--- a/2- tabuada/index.html
+++ b/2- tabuada/index.html
@@ -21,6 +21,23 @@
     />
   </head>
   <body>
+    <main>
+      <h1>Tabuada</h1>
+      <div class="content">
+        <p>Insira o numero para gerar a tabuada</p>
+        <div class="inputs">
+          <input type="number" 
+          id="number"
+          class="input"
+          required />
+          <button class="btn" >Gerar Tabuada</button>
+        </div>
+        <div class="tables">
+
+        </div>
+      </div>
+    </main>
+
     <script src="app.js"></script>
   </body>
 </html>
