--- a/3- deciamal-para-binario/index.html
+++ b/3- deciamal-para-binario/index.html
@@ -21,6 +21,20 @@
     />
   </head>
   <body>
+    <main>
+      <h1>Decimal para binário</h1>
+      <div class="converter">
+        <div class="converter__input">
+          <input class="input" type="number" required />
+          <button class="converter__input--btn" type="submit">Converter</button>
+        </div>
+      </div>
+
+      <div class="result">
+        <h2>Resultado:</h2>
+        <span class="result__span"></span>
+      </div>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
