--- a/3- deciamal-para-binario/index.html
+++ b/3- deciamal-para-binario/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Decimal para binario</title>
+    <title>Binario para decimal</title>
 
     <link rel="stylesheet" href="style.css" />
 
@@ -22,10 +22,14 @@
   </head>
   <body>
     <main>
-      <h1>Decimal para binário</h1>
+      <h1>Binário para decimal</h1>
       <div class="converter">
         <div class="converter__input">
-          <input class="input" type="number" required />
+          <input class="input" 
+          type="number" 
+          maxlength="8"
+          size="8"
+          required />
           <button class="converter__input--btn" type="submit">Converter</button>
         </div>
       </div>
