--- a/3- deciamal-para-binario/index.html
+++ b/3- deciamal-para-binario/index.html
@@ -26,8 +26,9 @@
       <div class="converter">
         <div class="converter__input">
           <input class="input" 
-          type="number" 
-          maxlength="8"
+          type="number"
+          mi="1"
+          max="8"
           size="8"
           required />
           <button class="converter__input--btn" type="submit">Converter</button>
