--- a/4- border-radius/index.html
+++ b/4- border-radius/index.html
@@ -47,9 +47,7 @@
     <div class="show">
       <div class="show-radius"></div>
       <div class="view-copy">
-        <span class="view-radius">
-          border-radius: 0px 0px 0px 0px
-        </span>
+        <span class="view-radius">border-radius: 0px 0px 0px 0px</span>
         <span class="copy">
           <i class="far fa-copy"></i>
         </span>
