--- a/4- border-radius/index.html
+++ b/4- border-radius/index.html
@@ -43,6 +43,10 @@
         <label for="bottom-right">Borda inferior direita:</label>
         <input type="number" id="bottom-right" class="bottom-right" />
       </div>
+      <div class="inputs">
+        <label for="color">Mudar a cor de fundo:</label>
+        <input type="color" id="color" class="input-color" />
+      </div>
     </div>
     <div class="show">
       <div class="show-radius"></div>
