--- a/5- google-search/index.html
+++ b/5- google-search/index.html
@@ -21,6 +21,16 @@
     />
   </head>
   <body>
+    <div class="search">
+      <h1>Pesquisar no Google</h1>
+      <div class="inputs">
+        <input class="input-search" type="text" placeholder="Pesquise aqui" />
+      </div>
+      <div class="links inputs">
+          <a class="btn-pt" href="" target="_blank">Google em pt-br </a>
+          <a class="btn-en" href="" target="_blank">Google em en-us</a>
+      </div>
+    </div>
     <script src="app.js"></script>
   </body>
 </html>
