--- a/6- dado-da-sorte/index.html
+++ b/6- dado-da-sorte/index.html
@@ -43,14 +43,14 @@
             <div></div>
           </div> -->
 
-          <div class="dado__numero--6 dado__numero--teste">
+          <!-- <div class="dado__numero--6 dado__numero--teste">
             <div></div>
             <div></div>
             <div></div>
             <div></div>
             <div></div>
             <div></div>
-          </div>
+          </div> -->
 
         </div>
       </div>
