--- a/6- dado-da-sorte/index.html
+++ b/6- dado-da-sorte/index.html
@@ -23,36 +23,7 @@
   <body>
     <div class="container">
       <div class="dado">
-        <div class="dado__numero">
-          <!-- <div class="dado__numero--2">
-            <div></div>
-            <div></div>
-          </div> -->
-          <!-- <div class="dado__numero--4 dado__numero--teste">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-          </div> -->
-
-          <!-- <div class="dado__numero--5 dado__numero--teste">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-          </div> -->
-
-          <!-- <div class="dado__numero--6 dado__numero--teste">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-          </div> -->
-
-        </div>
+        <div class="dado__numero"></div>
       </div>
       <button class="gerar-dado">Gerar Dado</button>
     </div>
