--- a/8- carrinho-de-compra/index.html
+++ b/8- carrinho-de-compra/index.html
@@ -19,8 +19,44 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://use.fontawesome.com/releases/v5.15.3/js/all.js"
+      data-auto-replace-svg="nest"
+    ></script>
   </head>
   <body>
+    <header>
+      <nav>
+        <li><i class="fas fa-cart-plus"></i></li>
+      </nav>
+    </header>
+    <main>
+       <div class="buys">
+         <div class="buys__names">
+           <h2>Teclado</h2>
+         </div>
+         <div class="imgs">
+           <img src="https://images.pexels.com/photos/841228/pexels-photo-841228.jpeg?cs=srgb&dl=pexels-karol-d-841228.jpg&fm=jpg" alt="Foto do teclado">
+         </div>
+         <div class="buys__info">
+           <span>Sobre o produto:</span>
+           <p>
+             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio necessitatibus veniam iusto reiciendis eius ex sed facere esse, quisquam eos.
+            </p>
+         </div>
+         <div class="buys__btns">
+          <button class="buys__btns--prev">
+            <i class="fas fa-arrow-left"></i>
+          </button>
+          <button class="buys__btns--next">
+            <i class="fas fa-arrow-right"></i>
+          </button>
+          <button class="buys__btns--add">
+            <i class="fas fa-plus"></i>
+          </button>
+         </div>
+       </div>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
