Arrays mostrado na tela

--- a/8- carrinho-de-compra/index.html
+++ b/8- carrinho-de-compra/index.html
@@ -33,14 +33,14 @@
     <main>
        <div class="buys">
          <div class="buys__names">
-           <h2>Teclado</h2>
+           <h2 class="title">Teclado</h2>
          </div>
          <div class="imgs">
-           <img src="https://images.pexels.com/photos/841228/pexels-photo-841228.jpeg?cs=srgb&dl=pexels-karol-d-841228.jpg&fm=jpg" alt="Foto do teclado">
+           <img class="buys__imgs--img" src="https://images.pexels.com/photos/841228/pexels-photo-841228.jpeg?cs=srgb&dl=pexels-karol-d-841228.jpg&fm=jpg" alt="Foto do teclado">
          </div>
          <div class="buys__info">
            <span>Sobre o produto:</span>
-           <p>
+           <p class="buys__info--p">
              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio necessitatibus veniam iusto reiciendis eius ex sed facere esse, quisquam eos.
             </p>
          </div>
