--- a/8- carrinho-de-compra/index.html
+++ b/8- carrinho-de-compra/index.html
@@ -28,6 +28,42 @@
     <header>
       <nav>
         <li><i class="fas fa-cart-plus"></i></li>
+
+        <div class="modal active">
+          <div class="modal__products">
+            <div class="teste">
+              <div class="items">
+                <span class="items__span">
+                  1 item no seu carrinho
+                </span>
+              </div>
+              <div class="products">
+                <div class="products__img">
+                  <img src="https://images.pexels.com/photos/841228/pexels-photo-841228.jpeg?cs=srgb&dl=pexels-karol-d-841228.jpg&fm=jpg" alt="Foto do produto">
+                </div>
+                <div class="products__info">
+                  <span class="products__info--span" >
+                    Teclado
+                  </span>
+                </div>
+                <div class="products__bnt">
+                  <div class="products__btn--unidade">
+                    <span>1</span>
+                  </div>
+                  <div class="products__btn">
+                    <button class="products__bnt--remove">
+                      <i class="far fa-minus-square"></i>
+                    </button>
+                    <button class="products__bnt--add">
+                      <i class="far fa-plus-square"></i>
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
       </nav>
     </header>
     <main>
