--- a/8- carrinho-de-compra/index.html
+++ b/8- carrinho-de-compra/index.html
@@ -36,7 +36,10 @@
 
               <div class="modal__products">
                 <div class="items">
-                  <span class="items__span"> 1 item no seu carrinho </span>
+                  <span class="items__span"> 
+                    <span class="items__span--number">0</span>
+                    item no seu carrinho 
+                  </span>
                 </div>
 
               <div class="car-modal">
