--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Document</title>
+   <title>Portifolio</title>
    <style>
       body {
          display: flex;
@@ -30,5 +30,6 @@
    <a href="./5- google-search/index.html">google-search</a>
    <a href="./6- dado-da-sorte/index.html">Dado da sorte</a>
    <a href="./7- carrinho-de-compra/index.html">Carrinho de Compras</a>
+   <a href="./8- api-pokedex/index.html">API pokemon</a>
 </body>
 </html>
