--- a/9- app-music/index.html
+++ b/9- app-music/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>App Music</title>
+    <title>Clima tempo</title>
 
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -15,6 +15,7 @@
     />
   </head>
   <body>
+    <input type="text" id="search">
     <script src="app.js"></script>
   </body>
 </html>
