--- a/9- app-music/index.html
+++ b/9- app-music/index.html
@@ -15,7 +15,25 @@
     />
   </head>
   <body>
-    <input type="text" id="search">
+    <main>
+      <span>Day</span>
+      <div class="weather">
+        <div class="weather__city">
+          <span class="weather__city--deg">11°C</span>
+          <span class="weather__city--city">São Paulo</span>
+        </div>
+        <div class="weather__minMax">
+          <span class="weather__minMax--min">
+            15
+            <span class="weather__minMax--min-text">min</span>
+          </span>
+          <span class="weather__minMax--max">
+            30
+            <span class="weather__minMax--max-text">max</span>
+          </span>
+        </div>
+      </div>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
