--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
    <a href="./6- dado-da-sorte/index.html">Dado da sorte</a>
    <a href="./7- carrinho-de-compra/index.html">Carrinho de Compras</a>
    <a href="./8- api-pokedex/index.html">API pokemon</a>
-   <a href="./9- app-music/">API pokemon</a>
+   <a href="./9- clima-tempo/index.html">Clima tempo</a>
 </body>
 </html>
