--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@
    <a href="./7- carrinho-de-compra/index.html">Carrinho de Compras</a>
    <a href="./8- api-pokedex/index.html">API pokemon</a>
    <a href="./9- clima-tempo/index.html">Clima tempo</a>
+   <a href="./10- api-github/index.html">Buscar perfil no GitHub</a>
 </body>
 </html>
