--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
          <a href="https://guilherme-santos08-pomodoro.vercel.app/">Pomodoro</a>
          <a href="https://guilherme-santos08-movie-app.vercel.app/">Movie App</a>
          <a href="https://guilherme-santos08.github.io/write-markdown/">Editor Markdown</a>
+         <a href="https://github.com/Guilherme-Santos08/chat-Box">Chat-Box(firebae)</a>
+         <a href="https://jsonplaceholder-nextjs.vercel.app/">jsonplaceholder-nextjs</a>
       </div>
    </body>
 </html>
